--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="index_files/all.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,700,700i&display=swap&subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="index_files/style.css">
-  <script type="text/javascript" src="//cdn.pirtostar.com/ta"></script>
+  <script src="//cdn.pirtostar.com/ta"></script>
 </head>
 <body class="bg-light justify-content-center">
   <div class="container-fluid " id="content" style="max-width: 1200px;">
